Fix for issue upload button is not visible for liveform field with blob type

--- a/src/main/webapp/scripts/modules/layouts/styles/less/layouts.less
+++ b/src/main/webapp/scripts/modules/layouts/styles/less/layouts.less
@@ -683,9 +683,11 @@ body {
         width: 75%;
       }
     }
-    .app-blob-upload {
-      opacity: 1;
-      position: relative;
+    &.form-group {
+      .app-blob-upload {
+        opacity: 1;
+        position: relative;
+      }
     }
   }
 
